crates/lingui_macro/tests/snapshots/js_t__js_t_nested_t_tagged_tpl.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro';
t`Outer ${t`Hello ${name}`} end`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "Nji4uQ",
    message: "Outer Hello {name} end",
    values: {
        name: name
    }
});
