crates/lingui_macro/tests/snapshots/js_t__js_t_unknown_tagged_tpl_nested.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro';
t`Field ${aaa`First Name`} is required`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "O8dJMg",
    message: "Field {0} is required",
    values: {
        0: aaa`First Name`
    }
});
