crates/lingui_macro/tests/snapshots/js_t__support_id_in_template_literal.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro'
const msg = t({ id: `msgId` })

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
const msg = $_i18n._(/*i18n*/ {
    id: "msgId"
});
