crates/lingui_macro/tests/snapshots/js_t__unicode_characters_interpreted.snap
---
source: crates/lingui_macro/tests/js_t.rs
---
import { t } from '@lingui/core/macro';
t`Message \u0020`;
t`Bienvenue\xA0!`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "dZXeyN",
    message: "Message  "
});
$_i18n._(/*i18n*/ {
    id: "9K3RGd",
    message: "Bienvenue !"
});
